Added two simple java modules, with a single dependency between them.